tests/baselines/reference/exportAsNamespace1(module=es2015).errors.txt
tests/cases/conformance/es2020/modules/1.ts(2,1): error TS2304: Cannot find name 'ns'.
tests/cases/conformance/es2020/modules/1.ts(3,1): error TS2304: Cannot find name 'ns'.


==== tests/cases/conformance/es2020/modules/0.ts (0 errors) ====
    export const a = 1;
    export const b = 2;
    
==== tests/cases/conformance/es2020/modules/1.ts (2 errors) ====
    export * as ns from './0';
    ns.a;
    ~~
!!! error TS2304: Cannot find name 'ns'.
    ns.b;
    ~~
!!! error TS2304: Cannot find name 'ns'.
    
==== tests/cases/conformance/es2020/modules/2.ts (0 errors) ====
    import * as foo from './1'
    
    foo.ns.a;
    foo.ns.b;